--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ mimalloc = "0.1.47"
 openssl = { version = "0.10.73", features = ["vendored"] }
 walkdir = "2.4.0"
 
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+
